# sonar-setup

./: README.md
backend/: main.py  pyproject.toml  sonar-project.properties
backend/.scannerwork/: report-task.txt
backend/.scannerwork/scanner-report/: activerules.pb  analysis-cache2.pb  analysis-warnings.pb  component-1.pb  component-2.pb  coverages-2.pb  measures-2.pb  metadata.pb  symbols-2.pb  syntax-highlightings-2.pb
backend/src/calc_backend/: main.py
backend/tests/: test_main.py
frontend/calc/: package-lock.json
