[tool.poetry]
name = "calc-backend"
version = "0.1.1"
description = "THis is calculator backend service"
authors = ["Delta"]
license = "Proprietray"
packages = [
    { include = "calc_backend", from = "src" },
    { include = "tests"}
]
exclude = ["tests", "*.pyc", "__pycache__"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
